<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="wrap_content"
        android:layout_height="324dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitXY" />


    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="100dp"
        android:text="left" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:text="right" />


    <Button
        android:id="@+id/btnSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="50dp"
        android:onClick="takePicture"
        android:text="snap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:editable="true" />

    <EditText
        android:id="@+id/editText3"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSnap"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="Enter Caption Here"
        android:inputType="textPersonName"
        android:singleLine="false" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="search"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="635dp" />

    <TextView
        android:id="@+id/lon"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="155dp"
        android:text="Longitude"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="154dp"
        android:text="Latitude"
        android:textSize="18sp" />

    <Button
        android:id="@+id/UploadS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="50dp"
        android:onClick="UploadButton"
        android:text="Upload" />

    <TextView
        android:id="@+id/UploadStatus"
        android:layout_width="106dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="5dp"
        android:text="Upload Status"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/currentLat"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/currentLon"
        android:text="Latitude"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:text="Your Current Location"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/currentLon"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="Longitude"
        android:textAlignment="textEnd"
        android:textSize="14sp" />


</RelativeLayout>